--- a/FlashCardMaker/FlashCardMaker/FlashCardMaker.csproj
+++ b/FlashCardMaker/FlashCardMaker/FlashCardMaker.csproj
@@ -49,6 +49,12 @@
     <Compile Include="CardsFile.cs" />
     <Compile Include="CardsFileReader.cs" />
     <Compile Include="CardsFileWriter.cs" />
+    <Compile Include="EditCardDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditCardDialog.Designer.cs">
+      <DependentUpon>EditCardDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="FlashCard.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -63,6 +69,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="EditCardDialog.resx">
+      <DependentUpon>EditCardDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FlashCard.resx">
       <DependentUpon>FlashCard.cs</DependentUpon>
     </EmbeddedResource>
